# rtl_sdr_flutter

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/mschwartz/rtl_sdr_flutter/: MethodHandlerImpl.java  RtlSdrFlutterPlugin.java  SdrArguments.java  SdrBinder.java  SdrDeviceProviderRegistry.java  SdrService.java  SdrServiceConnection.java  ServiceConnectionImpl.java  StreamHandlerImpl.java  UsbBinder.java  UsbService.java  UsedByJni.java
android/src/main/java/com/sdrtouch/core/: SdrArguments.java
android/src/main/java/com/sdrtouch/rtlsdr/: SdrDeviceProviderRegistry.java
android/src/main/java/com/sdrtouch/tools/: AsyncFuture.java
android/src/main/res/values/: strings.xml
android/src/main/res/xml/: autostart_device_filter.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
lib/: rtl_sdr_flutter.dart  rtl_sdr_flutter_method_channel.dart  rtl_sdr_flutter_platform_interface.dart  sdrarguments.dart
librtlsdr/: CMakeLists.txt
librtlsdr/librtlsdr/: CMakeLists.txt
librtlsdr/librtlsdr/libusb/: CMakeLists.txt
librtlsdr/librtlsdr/src/: librtlsdr.c
librtlsdr/src/: common.c  rtlsdrdevice.c
test/: rtl_sdr_flutter_method_channel_test.dart  rtl_sdr_flutter_test.dart
(+30 files in other folders)
